# tauri-svelte

./: .gitignore  .gitmodules  Cargo.toml  README.md  dev.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
src/: app.css
src-backend/native-tauri-surface/: Cargo.toml
src-backend/native-tauri-surface/src/: lib.rs  log.rs  surface_hash.rs  surface_helper.rs
src-backend/native-tauri-surface/src/platform/: macos.rs  mod.rs  surface_context.rs  web.rs  windows.rs
src-backend/native-tauri-surface/tests/: platform_support.rs
src-backend/utils_api/: Cargo.toml
src-backend/utils_api/src/: fs.rs
src-backend/wgpu-renderer/src/: lib.rs
src-frontend/: svelte.config.js  vite.config.js
src-frontend/src/: app.css
src-frontend/src-angular/: README.md  angular.json  package.json
src-frontend/src-angular/src/: index.html  main.ts  panels.ts  styles.css
src-frontend/src-angular/src/app/: app.html  (+3 more)
src-frontend/src-react/: index.html  package.json  vite.config.ts
src-frontend/src-react/src/: App.css  App.tsx  Popout.tsx  index.css  main.tsx  panels.ts
src-frontend/src-svelte/: .prettierrc.json  svelte.config.js  vite.config.js
src-frontend/src-svelte/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
src-frontend/src-svelte/src/: app.css
src-frontend/src/lib/: crossWindowDnd.ts  panels.ts  utils.test.ts
src-frontend/src/routes/: +page.svelte  page.css
src-tauri/: Cargo.toml  tauri-angular.conf.json  tauri-react.conf.json  tauri.conf.json
src-tauri/capabilities/: popout.json
src-tauri/src/: lib.rs
src-tauri/tests/: surface_integration.rs
src/lib/: crossWindowDnd.ts  panels.ts
src/lib/components/: DockLayout.svelte
src/routes/: +page.svelte
src/routes/popout/: +page.svelte
wgpu-renderer/: Cargo.toml
wgpu-renderer/src/: lib.rs
(+39 files in other folders)
