[package]
name = "native_tauri_surface"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = {version = "0.3", features = ["console"]}

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "*"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.3" }
objc2-quartz-core = { version = "0.3" }

[dev-dependencies]
pollster = "*"